# mcclient

./: .gitignore  Cargo.toml  LICENSE  README.md  test.json
examples/: offline.rs  parsing.rs  status_res.rs
src/: lib.rs  main.rs  mc.rs  tests.rs
src/mc/: connection.rs  mctypes.rs  mod.rs  packet.rs  stream.rs
src/mc/packet/: builder.rs  mod.rs  packet_ids.rs
src/mc/packet/clientbound/: login_success.rs  mod.rs  ping_response.rs  status_response.rs
src/mc/packet/serverbound/: handshake.rs  login_start.rs  mod.rs  status_request.rs
