[package]
name = "mcclient"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
serde_json = "1.0.97"

[dependencies.uuid]
version = "1.2.2"
features = [
    "v4", # To generate random UUIDs
]
